[package]
name = "trebuchet"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "LICENSE"
authors = ["Emmett Rayes <emmett.rayes@icloud.com>"]

[workspace]
members = ["uefi", "lib"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
log = "0.4.20"
serialport = "4.3.0"
trebuchet_lib = { path = "lib" }
